Moved MappingKeys from spring-configuration to jackson